fix(#476): modal flickering fixed

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -14,6 +14,10 @@
   animation: fade var(--ANIMATION-DURATION);
   will-change: opacity;
 
+  &--no-animated-open {
+    animation: none;
+  }
+
   &--close {
     opacity: 0;
   }
